--- a/packages/vue/test/compile/compile.html
+++ b/packages/vue/test/compile/compile.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,27 @@
   <script src="../../dist/vue.js"></script>
 
 </head>
+
 <body>
   <div id="app"></div>
   <script>
-    const { compile } = myVue
+    const { compile, h, render } = myVue
+
     const template = `<div>hello compiler</div>`
-    const renderFn = compile(template)
+    const { code } = compile(template)
+    // console.log(renderFn.ast);
+    // console.log(code);
+    const renderFn = new Function(code)()
+    // console.log(renderFn);
+
+    const component = {
+      render: renderFn
+    }
+    // console.log("component", component);
+    const vnode = h(component)
+    // console.log("vnode", vnode);
+    render(vnode, document.querySelector('#app'))
   </script>
 </body>
+
 </html>
