feature(vue): 更新测试实例

--- a/packages/vue/test/compile/compile.html
+++ b/packages/vue/test/compile/compile.html
@@ -18,9 +18,11 @@
     const { code } = compile(template)
     // console.log(renderFn.ast);
     // console.log(code);
-    const renderFn = new Function(code)()
+    // const renderFn = new Function(code)()
     // console.log(renderFn);
 
+    const renderFn = compile(template)
+    
     const component = {
       render: renderFn
     }
