test(vue): minivue测试实例

--- a/packages/vue/test/myvue.html
+++ b/packages/vue/test/myvue.html
@@ -11,14 +11,21 @@
 
 <body>
   <div id="app"></div>
-
   <script>
-    const { createApp, h } = myVue
+    const { createApp } = myVue
     const APP = {
-      template: `<div>hello create</div>`
-      // render() {
-      //   return h('h3', 'hello world')
-      // }
+      template: `<div>hello world, <h1 v-if="isShow">{{ msg }}</h1></div>`,
+      data() {
+        return {
+          msg: '你好，世界',
+          isShow: false
+        }
+      },
+      created() {
+        setTimeout(() => {
+          this.isShow = true
+        }, 2000);
+      }
     }
 
     const app = createApp(APP)
