feat(effect): 调整了调度器逻辑

--- a/packages/vue/test/reactivity/scheduler.html
+++ b/packages/vue/test/reactivity/scheduler.html
@@ -20,15 +20,17 @@
 
     myEffect(() => {
       console.log(obj.num);
-    }, {
-      scheduler() {
-        queuePreFlushCb(() => {
-          console.log(333);
-        })
+    },
+       {
+        scheduler(fn) {
+          queuePreFlushCb(fn)
+        }
       }
-    })
+    )
 
-    obj.num = 10
+    obj.num++
+    obj.num++
+    obj.num++
 
     console.log('end');
   </script>
